cc_binary(
    name = "MyDll",
    srcs = ["MyDll/MyDll.cpp", "MyDll/iversion.h",
    	"MyDll/MyDll.h"
    	],
#    hdrs = ["MyDll/MyDll.h"],
    
    copts = ["-fPIC"],
#    linkopts = ["-static"], # cause relocation R_X86_64_32 against hidden symbol `__TMC_END__' error.
    visibility = ["//visibility:public"],
    linkshared = True,
)

# https://bazel.build/reference/be/c-cpp#cc_import
cc_import (
    name = "myimplib",
    hdrs = ["MyDll/MyDll.h"],
	shared_library = "bazel-bin/libMyDll.so", # note: Cannot auto detect .so filename
)


cc_binary(
	name = "MyExeUseDll",
	srcs = ["MyExeUseDll/MyExeUseDll.cpp"],
	deps = [":myimplib"],
	linkstatic = False,
	copts = ["-I MyDll"]
)
